<resources>
    <string name="app_name">Carpooling</string>
    <string name="immaginesplash">imageSplash</string>
    <string name="Date">Date *</string>
    <string name="Home">Home</string>
    <string name="Departure">Departure\'s Hour *</string>
    <string name="Work">Work</string>
    <string name="WorkHome">Work-Home</string>
    <string name="HomeWork">Home-Work</string>
    <string name="giorno">Day of week</string>
    <string name="Search">Search</string>
    <string name="Driver">Name and surname driver</string>
    <string name="posti">N. available seats</string>
    <string name="Offer">Offer</string>
    <string name="dayOfWeek">Day of week</string>
    <string name="EntDate">Enter date</string>
    <string name="EntTime">Enter departure\'s hour </string>
    <string name="EntNameSurname">Enter name and surname of the driver </string>
    <string name="Occupied">Occupied Seats \: </string>
    <string name="Available">Available Seats \: </string>
    <string name="requiredRide">Request Ride</string>
    <string name="Direction">"Direction \: "</string>
    <string name="dateTime">"Date and time \: "</string>
    <string name="driver">"Driver : "</string>
    <string name="etUsername">Username</string>
    <string name="etName">Username</string>
    <string name="etUserEmail">E-mail</string>
    <string name="etUserPassword">Password</string>
    <string name="registrazione">SIGN UP</string>
    <string name="btnRegister">Create new account</string>
    <string name="Welcome">Welcome back!</string>
    <string name="Welcome2">Let\'s get started!</string>
    <string name="tvUserLogin">Login</string>
    <string name="Register">Aren\'t you registered?</string>
    <string name="Login">Are you registered yet?</string>
    <string name="Register2">Sign up now</string>
    <string name="Messaggio">By clicking "Create New Account", it will send you a verification email</string>
    <string name="Toast1">Enter email!</string>
    <string name="Toast2">Enter password!</string>
    <string name="TstPassShort">Password is too short(at least 6 characters)</string>
    <string name="Authenticationf">Authentication failed</string>
    <string name="Successful">Login successful</string>
    <string name="NotVerified">Email is not verified yet</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Description">Enter your registration email and we will send you a link in order to reset your password</string>
    <string name="Emailsent">Email sent</string>
    <string name="EmailNotRegistered">This email is not registered</string>
    <string name="NotifyApproved">Your account has been approved</string>
    <string name="Registration">Registration</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Cancel">Cancel</string>
    <string name="addphoto">Add a photo</string>
    <string name="selectfile">Select a file</string>
    <string name="Name">Name *</string>
    <string name="Surname">Surname *</string>
    <string name="Address">Home Address *</string>
    <string name="Phone">Phone Number *</string>
    <string name="Car">Your car </string>
    <string name="Conferma">Account Confirmation</string>
    <string name="EntName">Enter your name</string>
    <string name="EntSurname">Enter your surname</string>
    <string name="EntAddress">Enter your address</string>
    <string name="EntCompany">Enter your company</string>
    <string name="EntPhone">Enter your phone</string>
    <string name="EntPhone2">Enter a valid phone number</string>
    <string name="ConfirmUser">User stored into the database</string>
    <string name="Failure">Operation failed</string>
    <string name="emailSend">Wait\.\.\. request sent</string>
    <string name="body_mail">New user has required confirm of account.Login Carpooling app, click on linkhttps://carpooling.page.link/app </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_Name">Name </string>
    <string name="edit_Surname">Surname </string>
    <string name="edit_Phone">Phone Number </string>
    <string name="edit_Car">Your car </string>
    <string name="save">Save</string>
    <string name="nothing_car">Nothing car</string>
    <string name="HomePage">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile">Profile</string>
    <string name="myrides">My Rides</string>
    <string name="searchride">Search ride</string>
    <string name="Rank">Rank</string>
    <string name="offeraride">Offer ride</string>
    <string name="approved">Affiliation requests</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="offered">OFFERED</string>
    <string name="required">REQUIRED</string>
    <string name="delete">Delete</string>
    <string name="Removed">It is removed</string>
    <string name="UNDO">UNDO</string>
    <string name="accepted">ACCEPTED</string>
    <string name="refused">REFUSED</string>
    <string name="wait">PENDING</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_required_maps">Map</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_offered_map">Map</string>
    <string name="error_seats">Seats are all occupied. It\'s impossible to accept new requests</string>
    <string name="waitForVerification">Wait for the verification code by SMS</string>
</resources>