<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.uniba.di.sms.carpooling.PasswordActivity">

    <EditText
        android:id="@+id/etPassEmail"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="332dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="134dp"
        android:ems="10"
        android:hint="@string/etUserEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ResetPass"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="269dp"
        android:layout_marginTop="15dp"
        android:text="@string/ResetPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassEmail" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="338dp"
        android:layout_height="62dp"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        style="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
</android.support.constraint.ConstraintLayout>
