<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/item_historical_point"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <LinearLayout
            android:id="@+id/layout_casaLavoro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/casa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_arrow_forward" />

        <TextView
            android:id="@+id/lavoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Work"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/ora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ora"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/nPunti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="60dp"/>
        <TextView
            android:id="@+id/punti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Punti"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="3dp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>